[tool]
[tool.poetry]
name = "zillipy"
version = "0.1.0"
description = "Python Library Zilliqa APIs"
authors = [
    "Cameron Sajedi <cameron@starlingfoundries.com>"
]
[tool.poetry.dependencies]
python = "*"
fastecdsa = "==1.7.1"
jsonrpcclient = "==3.3.1"
protobuf = "==3.7.1"
pycryptodome = "==3.8.0"
pyethash = "==0.1.27"
pytest = "==4.3.1"
requests = "==2.21.0"
